--- a/build_and_price.html
+++ b/build_and_price.html
@@ -21,7 +21,7 @@
             <div class="logo">
                 <i class="fa-brands fa-slack"></i>
             </div>
-            <div><h1><a href="bai_tap_lon.html">My CarShop</a></h1></div>
+            <div><h1><a href="index.html">My CarShop</a></h1></div>
         </div>      
         <ul class="flex main menus" id="main">
             <li class="has_child" id="hover"><span id="hover1">SHOP</span>
